# FTDT_1D_OOP_Solver

./: .gitignore  CMakeLists.txt  plot_fft.py
include/: Boundary.h  BraggGrating.h  Device.h  FabryPerotCavity.h  Grid1D.h  Simulation.h  Source.h
src/: main.cpp
